--- a/AnimalChessTests/AnimalChessTests/AnimalChessTests.csproj
+++ b/AnimalChessTests/AnimalChessTests/AnimalChessTests.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="LogicTests\AnimalTests.cs" />
     <Compile Include="LogicTests\BoardTests.cs" />
+    <Compile Include="LogicTests\PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
