add WhenMovingAnimalToEmptySquare.AnimalChangePos test

--- a/AnimalChessTests/AnimalChessTests/AnimalChessTests.csproj
+++ b/AnimalChessTests/AnimalChessTests/AnimalChessTests.csproj
@@ -54,7 +54,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="LogicTests\AnimalTests.cs" />
+    <Compile Include="LogicTests\WhenMovingAnimalToEmptySquare.cs" />
     <Compile Include="LogicTests\BoardTests.cs" />
     <Compile Include="LogicTests\PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
